# gl-vscode-template-arm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_TEMPLATE.md  arm-gcc-toolchain.cmake  flags.cmake  project.yml  setup.ps1  setup.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
cmake/: debug_jlink.cmake  debug_pyocd.cmake  flags.cmake
doc/: DEVELOP_STRATEGY.md  DOCUMENTATION_STYLE.md
src/: error.h  main.c  version.h
src/board/: board.c  board.h
